output/SMT/o3-mini-2025-01-31/trip/output/trip_planning_example_762.out
  File "/home/hz466/calendar-planning/source/../output/SMT/o3-mini-2025-01-31/trip/code/trip_planning_example_762.py", line 108
    /* else (pos[0]==5): */ durations[5])))))
    ^
SyntaxError: invalid syntax
